[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flask-silo"
version = "0.1.1"
description = "Session-isolated state management for Flask APIs - TTL-enforced, thread-safe, with background tasks and file storage."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Pasindu Suraweera", email = "pssuraweera2003@gmail.com" },
]
keywords = [
    "flask",
    "session",
    "state-management",
    "isolation",
    "ttl",
    "background-tasks",
    "upload",
    "api",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Session",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "flask>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/flask-silo"
Repository = "https://github.com/yourusername/flask-silo"
Documentation = "https://github.com/yourusername/flask-silo#readme"
Issues = "https://github.com/yourusername/flask-silo/issues"
Changelog = "https://github.com/yourusername/flask-silo/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/flask_silo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
source = ["flask_silo"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 90
